tests/NormalTests/paczka2/big_fuzzy/68133140.err
Error in line 5: aW4ex6TiH '911 97,1
Error in line 4: A69 S706 75,3
Error in line 1: aW4ex6TiH A964 19,9
Error in line 6: J72 A911 61,6
Error in line 18: ymh8ySxPMq A911 94,3
Error in line 11: aW4ex6TiH A911 7,8
Error in line 32: J72 S706 4,7
Error in line 36: J72 A69 98,2
Error in line 39: J72 A911 5,1
Error in line 35: bDXxcmUDQ A911 4,2
Error in line 50: A69 S706 99,7
Error in line 54: A69 A69 34,1
Error in line 57: u2iVU17faTE A69 32,71
Error in line 49: aW4ex6TiH A964 75,4
Error in line 65: aW4ex6TiH S706 13,2
Error in line 67: aW4ex6TiH A69 29,0
Error in line 30: ymh8ySxPMq A964 138,3
Error in line 79: A69 A911 42,65
Error in line 86: J72 S706 31,2
Error in line 85: u2iVU17faTE A964 68,6
Error in line 98: bDXxcmUDQ S706 70,8
Error in line 117: ymh8ySxPMq A69 94,1
Error in line 123: ymh8ySxPMq A911 -1,9
Error in line 122: A69 A911 30,5
Error in line 119: ymh8ySxPMq A911 14,6
Error in line 134: J72 S706 66,8
Error in line 144: J72 A69 71,2
Error in line 148: J72 S706 15,9
Error in line 151: J72 A911 55,2
Error in line 159: bDXxcmUDQ A69 13,5
Error in line 133: DIsCZg5 A69 39,3
Error in line 201: bDXxcmUDQ A911 -2,5
Error in line 197: ymh8ySxPMq A964 303,5
Error in line 211: J72 A69 39,4
Error in line 228: aW4ex6TiH A911 27,68
Error in line 225: DIsCZg5 A911 14,8
Error in line 236: aW4ex6TiH A911 82,8
